--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,6 +39,6 @@ dependencies {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
-    compile 'com.android.support:multidex:1.0.1'
+    // compile 'com.android.support:multidex:1.0.1'
 
 }
